--- a/OneLocker/page1.html
+++ b/OneLocker/page1.html
@@ -56,7 +56,7 @@
 						<a href="https://calendar.google.com/calendar/?authuser=shwin320@gmail.com" target="_blank" title="Google Calendar"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Calendar_icon_%282020%29.svg/100px-Google_Calendar_icon_%282020%29.svg.png" width=100 height=100 alt="Google Calander"></a>\
 					</span>\
 				</div>\
-				<div style="width: 786.612021857px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 686.612021857px; margin: 0px 8px 8px 0px;">\
 					<h2>News:</h2>\
 					<span>\
 						<a href="https://news.google.com/foryou?hl=en-US&gl=US&ceid=US%3Aen" target="_blank" title="Google News"><img src="https://lh3.googleusercontent.com/J6_coFbogxhRI9iM864NL_liGXvsQp2AupsKei7z0cNNfDvGUmWUy20nuUhkREQyrpY4bEeIBuc=w300" width=100 height=100 alt="Google News"></a>\
@@ -64,25 +64,24 @@
 						<a href="https://www.theverge.com/" target="_blank" title="The Verge"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/The_Verge_Logo_2016.svg/100px-The_Verge_Logo_2016.svg.png" width=100 height=100 alt="The Verge"></a>\
 						<a href="https://www.nytimes.com/" target="_blank" title="The New York Times"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/NYTimes.png" width=100 height=100 alt="The New York Times"></a>\
 						<a href="https://www.washingtonpost.com/" target="_blank" title="The Washington Post"><img src="https://lh3.googleusercontent.com/JDrO88srYGmqrOeyqtT1al3JQD0IKRS-OO7PDMjETiPuDNgCC45wJF8LIBH-QOcTMTE=s180-rw" width=100 height=100 alt="The Washington Post"></a>\
-						<a href="https://www.bbc.com/news" target="_blank" title="BBC News"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/BBC_News_2019.svg/150px-BBC_News_2019.svg.png" width="100" height=100 alt="BBC News"></a>\
 					</span>\
 				</div>\
-				<div style="width: 738.3424657535px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 643px; margin: 0px 8px 8px 0px;">\
 					<h2>Learning:</h2>\
 					<span>\
 						<a href="https://www.youtube.com/user/crashcourse" target="_blank" title="Crash Course"><img src="https://upload.wikimedia.org/wikipedia/en/e/e9/Crash_Course_logo.png" width=100 height=100 alt="Crash Course"></a>\
-						<a href="https://www.wikipedia.org/" target="_blank" title="Wikipedia"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/150px-Wikipedia-logo-v2.svg.png" width=100 height=100 alt="Wikipedia"></a>\
-						<a href="https://www.merriam-webster.com/" target="_blank" title="Merriam-Webster"><img src="https://merriam-webster.com/assets/mw/static/app-css-images/logos/mw-logo.png" width=100 height=100 alt="Merriam-Webster"></a>\
-						<a href="https://www.history.com/this-day-in-history" target="_blank" title="This Day in History"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/History_Logo.svg/800px-History_Logo.svg.png" id="dHist" width=95.3424657535 height=100 alt="This Day in History"></a>\
 						<a href="https://www.ted.com/" target="_blank" title="TED"><img src="https://lh3.googleusercontent.com/w_bxOqm2p2BntxtMt_MQqwxRJhI4MQR0cu-Gn_oKkd9UXGG3FH8S2xRTkx9vtArBcp8l=s180-rw" id="dTed" width=100 height=100 alt="TED"></a>\
+						<a href="https://www.wikipedia.org/" target="_blank" title="Wikipedia"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/150px-Wikipedia-logo-v2.svg.png" width=100 height=100 alt="Wikipedia"></a>\
+						<a href="https://www.coursera.org/" target="_blank" title="Coursera"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Coursera-Logo_600x600.svg/600px-Coursera-Logo_600x600.svg.png" width=100 height=100 alt="Coursera"></a>\
 						<a href="https://learn.mangolanguages.com" target="_blank" title="Mango Languages"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@ca28682/Mango.png" id="dMan" width=93 height=100 alt="Mango Languages"></a>\
 					</span>\
 				</div>\
-				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
 					<h2>Programming:</h2>\
 					<span>\
 						<a href="https://education.github.com/pack/offers" target="_blank" title="GitHub"><img src="https://avatars0.githubusercontent.com/u/9919?s=280&v=4" width=100 height=100 alt="GitHub"></a>\
 						<a href="https://www.w3schools.com/" target="_blank" title="W3 Schools"><img src="https://lh3.googleusercontent.com/TMzz-6Kdjp4E0Z4hxETNvgBolVDkUBIjzczjWvfzKaV_k8cZbCv9jmCen2nhxwMKDw=s180-rw" width=100 height=100 alt="W3 Schools"></a>\
+						<a href="https://stackexchange.com/" target="_blank" title="Stack Exchange"><img src="https://stackoverflow.design/assets/img/logos/se/se-icon.png" width=100 height=100 alt="Stack Exchange"></a>\
 						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
 					</span>\
 				</div>\
