--- a/OneLocker/page3.html
+++ b/OneLocker/page3.html
@@ -73,26 +73,22 @@
 						<a href="https://mail.google.com/mail/u/?authuser=athomas7388@students.mc3.edu" target="_blank" title="Gmail"><img src="https://lh3.googleusercontent.com/86N90L0IJ785jaRXwXX0UAycK5MZQ3fTJRaIjgvF2PVJqjw5NkVequXgELwIEAnJG0SRxVUSaa5_Yw1_wW3LrxAN4oNZ8VCoeQuddmI=h120" width=100 height=100 alt="Gmail"></a>\
 					</span>\
 				</div>\
-				<div style="width: 489px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 646.999999998px; margin: 0px 8px 8px 0px;">\
 					<h2>College Prep:</h2>\
 					<span>\
-						<a href="https://accounts.google.com/o/saml2/initsso?idpid=C01p8vbki&spid=470862358434&forceauthn=false" target="_blank" title="Naviance"><img src="https://pbs.twimg.com/profile_images/1254871482737491968/NtgcfFEv_400x400.png" width=100 height=100 alt="Naviance"></a>\
-						<a href="https://www.collegeboard.org/" target="_blank" title="College Board"><img src="https://pbs.twimg.com/profile_images/826105112011665408/zCyFRC8I_400x400.jpg" width=100 height=100 alt="College Board"></a>\
+						<a href="https://accounts.google.com/o/saml2/initsso?idpid=C01p8vbki&spid=470862358434&forceauthn=false" target="_blank" title="Naviance"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@7e5c8ae/naviance.png" width=100 height=100 alt="Naviance"></a>\
+						<a href="https://www.collegeboard.org/" target="_blank" title="College Board"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@7e5c8ae/colBoard.png" width=100 height=100 alt="College Board"></a>\
 						<a href="https://www.niche.com/" target="_blank" title="Niche"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@276583a/Niche.png" width=139 height=100 alt="Niche"></a>\
-					</span>\
-				</div>\
-				<div style="width: 307.999999998px; margin: 0px 8px 8px 0px;">\
-					<h2>Test Prep:</h2>\
-					<span>\
 						<a href="https://www.khanacademy.org/mission/sat" target="_blank" title="SAT Prep"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/sat.png" width=157.999999998 height=100 alt="SAT Prep"></a>\
 					</span>\
 				</div>\
-				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
 					<h2>Scholarships:</h2>\
 					<span>\
+						<a href="https://bold.org/" target="_blank" title="Bold.org"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@7e5c8ae/bold.png" width=100 height=100 alt="Bold.org"></a>\
 						<a href="https://www.fastweb.com/" target="_blank" title="Fastweb"><img src="https://lh3.googleusercontent.com/mASZO0YvSLYzJCY1Bb5MB-a2iO6zW6fXSa-bgIE0aXuzMneVJDqhT4icdJAdckWVhFzu=s180-rw" width=100 height=100 alt="Fastweb"></a>\
 						<a href="https://www.scholarships.com/" target="_blank" title="Scholarships.com"><img src="https://lh3.googleusercontent.com/9S5sLr4y-5vRwDQ943aX1wnDYZA-HKT6vHRrjm7kXxhZfxsE6VYIhPX79lNy16mhuHw=s180-rw" width=100 height=100 alt="Scholarships.com"></a>\
-						<a href="https://www.cappex.com/scholarships" target="_blank" title="Cappex"><img src="https://pbs.twimg.com/profile_images/1241088771002638337/xuXdZN2A_400x400.png" id="dCapp" width=100 height=100 alt="Cappex"></a>\
+						<a href="https://www.cappex.com/scholarships" target="_blank" title="Cappex"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@7e5c8ae/cappex.png" id="dCapp" width=100 height=100 alt="Cappex"></a>\
 					</span>\
 				</div>\
 				');
