--- a/OneLocker/page4.html
+++ b/OneLocker/page4.html
@@ -45,53 +45,36 @@
 			if(localStorage.getItem("user") != "shwin17MAGD" && localStorage.getItem("user") != "demo" && localStorage.getItem("user") != "lmtsd"){
 				window.location.replace("/OneLocker/login");
 			} else if(localStorage.getItem("user") == "shwin17MAGD"){
-				$("title").html("Money — OneLocker");
+				$("title").html("Agenda — OneLocker");
 				$("#content").html('\
-				<h1>Money</h1>\
-				<div style="width: 250px; margin: 0px 8px 8px 0px;">\
-					<h2>Budget:</h2>\
-					<span>\
-						<a href="https://drive.google.com/drive/u/0/folders/1D24zb9iSw7J8sRPz7pJ1Qy5noJjeoveW" target="_blank" title="Budget"><img src="https://cdn.brainpop.com/socialstudies/economics/budgets/icon_360x360.png" width=100 height=100 alt="Budget"></a>\
-					</span>\
+				<h1>Agenda</h1>\
+				<div style="width: 100%; height: 390px; position: relative; box-shadow: none; background-color: inherit;">\
+					<iframe src="https://docs.google.com/document/d/1C_EIn7SYQXHBECvI45rT4x9c7geET5huVUNC3I2uRaQ/edit?embedded=true&rm=demo" style="width: 80%; height: 100%; display: block; box-shadow: 0px 0px 5px #989595;"></iframe>\
+					<form id="calChange" style="position: absolute; top: 0px; right: 0px; width: 18%">\
+						<h2>Calendar:</h2>\
+						<select>\
+							<option value="1">Personal</option>\
+							<option value="2">School</option>\
+							<option value="3">College</option>\
+						</select>\
+						<input type="submit" value="Select"></input>\
+					</form>\
 				</div>\
-				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
-					<h2>eBay:</h2>\
-					<span>\
-						<a href="https://www.ebay.com/mys/overview" target="_blank" title="eBay"><img src="https://lh3.googleusercontent.com/31-mJUIynIfQBizOn-w1yWLKHBxVeRKA3gz348_E3K-TnuEaqCjn_-Fr9j0yQ6i0y5E=s180-rw" id="dBay" width=100 height=100 alt="eBay"></a>\
-						<a href="https://www.paypal.com/myaccount/summary" target="_blank" title="PayPal"><img src="https://pbs.twimg.com/profile_images/1278352097688182784/Bn7-mEJ9_400x400.jpg" id="dPal" width=100 height=100 alt="PayPal"></a>\
-					</span>\
-				</div>\
-				<div style="width: 250px; margin: 0px 8px 8px 0px;">\
-					<h2>Investments:</h2>\
-					<span>\
-						<a href="https://www.stockpile.com/dashboard" target="_blank" title="Stockpile"><img src="https://lh3.googleusercontent.com/JYEnm6vC_77tI2Y8Ve6OrxiLED92OKf4Pb8okW8OBAtpVMYMxKw8RyG7tjuKdq1VfExv=s180-rw" width=100 height=100 alt="Stockpile"></a>\
-					</span>\
-				</div>\
-				<div style="width: 427.11171662px; margin: 0px 8px 8px 0px;">\
-					<h2>Job Search:</h2>\
-					<span>\
-						<a href="https://www.indeed.com/" target="_blank" title="Indeed"><img src="https://lh3.googleusercontent.com/jj2z8DZ-Z5rV-Y4IY0ZklkuPjCchjeeisflFD0dU_zlJNpbUJkDTQpAMlc5rwutKFSU=s180-rw" id="dInde" width=100 height=100 alt="Indeed"></a>\
-						<a href="https://www.lmtsd.org/cms/lib/PA01000427/Centricity/Domain/75/STUDENT_WORKING_PERMITS.pdf" target="_blank" title="Working Permit"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/permit.png" width=100 height=100 alt="Working Permit"></a>\
-						<a href="https://drive.google.com/drive/folders/1E0K--lCsma1vg-sis2rN8fTxmt0Yhycm" target="_blank" title="Resume"><img src="https://ssl.gstatic.com/docs/templates/thumbnails/1ETLRcC9GWUlGnH8WzySFixtEXN26hI7iEmj2mcH3Kb4_400.png" width=77.1117166205 height=100 alt="Resume"></a>\
-					</span>\
-				</div>\
-				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
-					<h2>Atava:</h2>\
-					<span>\
-						<a href="https://education.github.com/pack/offers" target="_blank" title="GitHub"><img src="https://avatars0.githubusercontent.com/u/9919?s=280&v=4" width=100 height=100 alt="GitHub"></a>\
-						<a href="https://analytics.google.com/" target="_blank" title="Google Analytics"><img src="https://lh3.googleusercontent.com/Ac7UebUnwu5-zLt4gN1HlW5KgZhquPJbNhQk2chzdrMjoTPxKJQkxBL5FGAJgp3lCw=s180-rw" width=100 height=100 alt="Google Analytics"></a>\
-					</span>\
+				<div id="calCont" style="position: fixed; top: 100px; height: 460px; width: 90vw; left: 5vw; box-shadow: none; background-color: inherit;">\
+					<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/close.svg" id="dClos" style="position: absolute; top: 0px; right: 0px; height: 18px;" alt="Close">\
+					<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23B39DDB&amp;ctz=America%2FNew_York&amp;src=dnFuOG44NHN0ZHVlNm9kZWJibmZmaDFncGtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=c2h3aW4zMjBAZ21haWwuY29t&amp;src=ZmFtaWx5MDI0NzIyNjUxNDc4MTI2MTc2NTBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%237986CB&amp;color=%23F6BF26&amp;color=%230B8043&amp;showTitle=0&amp;showTz=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0" style="border:solid 1px #777; height: 100%; width: 100%; box-shadow: 0px 0px 5px #989595;" frameborder="0" scrolling="no" id="calP"></iframe>\
+					<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23039BE5&amp;ctz=America%2FNew_York&amp;src=YXRob21hczUxNDlAc3R1LmxtdHNkLm9yZw&amp;src=bG10c2Qub3JnX2pqdHY0YmVuczZva20xZ2l1ODgyYWxxaWZjQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&amp;src=ZXBybDVpMWk2a2UzdmhiM3RpajVjNzU0MzZpY2dsajBAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%23039BE5&amp;color=%23D81B60&amp;color=%23F6BF26&amp;showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0" style="border:solid 1px #777; height: 100%; width: 100%; box-shadow: 0px 0px 5px #989595;" frameborder="0" scrolling="no" id="calS"></iframe>\
+					<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23F09300&amp;ctz=America%2FNew_York&amp;src=YXNod2lucHRob21hczNAZ21haWwuY29t&amp;color=%23039BE5&amp;showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0" style="border:solid 1px #777; height: 100%; width: 100%; box-shadow: 0px 0px 5px #989595;" frameborder="0" scrolling="no" id="calC"></iframe>\
 				</div>\
 				');
 				$("#siteNav").html('\
 				<a href="/OneLocker/page1"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/home.svg" id="dHome" width="24" height="24">Personal</a>\
 				<a href="/OneLocker/page2"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/school.svg" id="dSchoo" width="24" height="24">School</a>\
 				<a href="/OneLocker/page3"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/college.svg" id="dColl" width="24" height="24">College</a>\
-				<a href="/OneLocker/page4" id="active"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/money.svg" id="dMon" width="24" height="24">Money</a>\
-				<a href="/OneLocker/page5"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/agenda.svg" id="dAgen" width="24" height="24">Agenda</a>\
+				<a href="/OneLocker/page4" id="active"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/agenda.svg" id="dAgen" width="24" height="24">Agenda</a>\
 				<a id="account"><span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/account.svg" id="dAcc" width="24" height="24">Account</span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/dropDown.svg" id="dDrop" height="18" style="display: inline-block; margin: 0px;"></a>\
 					<nav id="accOpt">\
-						<p>Welcome to your Locker, Ashwin Thomas!</p>\
+						<p>Welcome to your Locker, Ashwin Thomas</p>\
 						<a href="/OneLocker/login" style="border-top: 1px solid #5f6368" class="logout">Logout</a>\
 					</nav>\
 				');
@@ -117,6 +100,33 @@
 					localStorage.clear();
 					window.location.href="/OneLocker/login";
 				});
+				$("#calCont").hide();
+				$("#calP").hide();
+				$("#calS").hide();
+				$("#calC").hide();
+				$("#calChange").on("submit", function(e){
+				e.preventDefault();
+				$("#calCont").show(1500);
+				if($("#calChange").find("select").val() == "1"){
+					$("#calP").show(1500);
+					$("#calS").hide(1500);
+					$("#calC").hide(1500);
+				} else if($("#calChange").find("select").val() == "2"){
+					$("#calP").hide(1500);
+					$("#calS").show(1500);
+					$("#calC").hide(1500);
+				} else if($("#calChange").find("select").val() == "3"){
+					$("#calP").hide(1500);
+					$("#calS").hide(1500);
+					$("#calC").show(1500);
+				};
+			});
+			$("#dClos").on("click", function(e){
+				$("#calCont").hide(1500);
+				$("#calP").hide(1500);
+				$("#calS").hide(1500);
+				$("#calC").hide(1500);
+			});
 			} else if(localStorage.getItem("user") == "demo"){
 				window.location.replace("/OneLocker/");
 			} else if(localStorage.getItem("user") == "lmtsd"){
