--- a/OneLocker/page1.html
+++ b/OneLocker/page1.html
@@ -76,6 +76,14 @@
 						<a href="https://learn.mangolanguages.com" target="_blank" title="Mango Languages"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@ca28682/Mango.png" id="dMan" width=93 height=100 alt="Mango Languages"></a>\
 					</span>\
 				</div>\
+				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
+					<h2>Design:</h2>\
+					<span>\
+						<a href="https://www.canva.com/" target="_blank" title="Canva"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@5024bb5/Canva.png" width=100 height=100 alt="Canva"></a>\
+						<a href="https://polar3d.com/" target="_blank" title="Polar Cloud"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Polar_Cloud_Enabled_Logo.png" width=100 height=100 alt="Polar Cloud"></a>\
+						<a href="https://www.vectary.com/dashboard/?teamId=b7845d38-67a1-4439-a286-e9c66adccc22" target="_blank" title="Vectary"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@b7f0b3c/Vectary.png" id="dVec" width=100 height=100 alt="Vectary"></a>\
+					</span>\
+				</div>\
 				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
 					<h2>Programming:</h2>\
 					<span>\
@@ -85,12 +93,11 @@
 						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
 					</span>\
 				</div>\
-				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
-					<h2>Design:</h2>\
+				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
+					<h2>Money:</h2>\
 					<span>\
-						<a href="https://www.canva.com/" target="_blank" title="Canva"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@5024bb5/Canva.png" width=100 height=100 alt="Canva"></a>\
-						<a href="https://polar3d.com/" target="_blank" title="Polar Cloud"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Polar_Cloud_Enabled_Logo.png" width=100 height=100 alt="Polar Cloud"></a>\
-						<a href="https://www.vectary.com/dashboard/?teamId=b7845d38-67a1-4439-a286-e9c66adccc22" target="_blank" title="Vectary"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@b7f0b3c/Vectary.png" id="dVec" width=100 height=100 alt="Vectary"></a>\
+						<a href="https://drive.google.com/drive/u/0/folders/1D24zb9iSw7J8sRPz7pJ1Qy5noJjeoveW" target="_blank" title="Budget"><img src="https://cdn.brainpop.com/socialstudies/economics/budgets/icon_360x360.png" width=100 height=100 alt="Budget"></a>\
+						<a href="https://www.stockpile.com/dashboard" target="_blank" title="Stockpile"><img src="https://lh3.googleusercontent.com/JYEnm6vC_77tI2Y8Ve6OrxiLED92OKf4Pb8okW8OBAtpVMYMxKw8RyG7tjuKdq1VfExv=s180-rw" width=100 height=100 alt="Stockpile"></a>\
 					</span>\
 				</div>\
 				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
