--- a/OneLocker/page3.html
+++ b/OneLocker/page3.html
@@ -51,9 +51,9 @@
 				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
 					<h2>Productivity:</h2>\
 					<span>\
-						<a href="https://mail.google.com/mail/u/?authuser=ashwinpthomas3@gmail.com" target="_blank" title="Gmail"><img src="https://lh3.googleusercontent.com/86N90L0IJ785jaRXwXX0UAycK5MZQ3fTJRaIjgvF2PVJqjw5NkVequXgELwIEAnJG0SRxVUSaa5_Yw1_wW3LrxAN4oNZ8VCoeQuddmI=h120" width=100 height=100 alt="Gmail"></a>\
-						<a href="https://drive.google.com/drive/u/?authuser=ashwinpthomas3@gmail.com" target="_blank" title="Google Drive"><img src="https://lh3.googleusercontent.com/A-jk5o_CT_ucUdRRwmchoeMx1qoKolfGKFptEBHANKZELMmeJALE7m4KOZdDu0NjFNiekH0j2T981f5N_nZ_IU1HsRehKLPRQAX0=h120" width=100 height=100 alt="Google Drive"></a>\
-						<a href="https://calendar.google.com/calendar/?authuser=ashwinpthomas3@gmail.com" target="_blank" title="Google Calendar"><img src="https://lh3.googleusercontent.com/Wj2TC83OMCWpHPH9R-ebuLwseO5cPbsoaM8YEx3oRcakA2Ck4OG-SVv9YrYE4arZ_jC2VnImXJdr1xJognMvnmAQcZtdc54vKttQew=h120" width=100 height=100 alt="Google Calander"></a>\
+						<a href="https://mail.google.com/mail/u/?authuser=ashwinpthomas3@gmail.com" target="_blank" title="Gmail"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/100px-Gmail_icon_%282020%29.svg.png" width=100 height=100 alt="Gmail"></a>\
+						<a href="https://drive.google.com/drive/u/?authuser=ashwinpthomas3@gmail.com" target="_blank" title="Google Drive"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/100px-Google_Drive_icon_%282020%29.svg.png" width=100 height=100 alt="Google Drive"></a>\
+						<a href="https://calendar.google.com/calendar/?authuser=ashwinpthomas3@gmail.com" target="_blank" title="Google Calendar"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Calendar_icon_%282020%29.svg/100px-Google_Calendar_icon_%282020%29.svg.png" width=100 height=100 alt="Google Calander"></a>\
 					</span>\
 				</div>\
 				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
@@ -69,8 +69,8 @@
 					<h2>Montco:</h2>\
 					<span>\
 						<a href="https://connect.mc3.edu/" target="_blank" title="Montco Connect"><img src="https://lh3.googleusercontent.com/-4VkGlxHdgmE07yc8m1CyFU5RTUKh48RXzrki5w8S6VSjc-62Sw-j-1y9j4SdcX23yPO=s180-rw" width=100 height=100 alt="Montco Connect"></a>\
-						<a href="https://drive.google.com/drive/u/?authuser=athomas7388@students.mc3.edu" target="_blank" title="Google Drive"><img src="https://lh3.googleusercontent.com/A-jk5o_CT_ucUdRRwmchoeMx1qoKolfGKFptEBHANKZELMmeJALE7m4KOZdDu0NjFNiekH0j2T981f5N_nZ_IU1HsRehKLPRQAX0=h120" width=100 height=100 alt="Google Drive"></a>\
-						<a href="https://mail.google.com/mail/u/?authuser=athomas7388@students.mc3.edu" target="_blank" title="Gmail"><img src="https://lh3.googleusercontent.com/86N90L0IJ785jaRXwXX0UAycK5MZQ3fTJRaIjgvF2PVJqjw5NkVequXgELwIEAnJG0SRxVUSaa5_Yw1_wW3LrxAN4oNZ8VCoeQuddmI=h120" width=100 height=100 alt="Gmail"></a>\
+						<a href="https://drive.google.com/drive/u/?authuser=athomas7388@students.mc3.edu" target="_blank" title="Google Drive"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/100px-Google_Drive_icon_%282020%29.svg.png" width=100 height=100 alt="Google Drive"></a>\
+						<a href="https://mail.google.com/mail/u/?authuser=athomas7388@students.mc3.edu" target="_blank" title="Gmail"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/100px-Gmail_icon_%282020%29.svg.png" width=100 height=100 alt="Gmail"></a>\
 					</span>\
 				</div>\
 				<div style="width: 646.999999998px; margin: 0px 8px 8px 0px;">\
