--- a/OneLocker/page1.html
+++ b/OneLocker/page1.html
@@ -61,7 +61,7 @@
 					<span>\
 						<a href="https://news.google.com/foryou?hl=en-US&gl=US&ceid=US%3Aen" target="_blank" title="Google News"><img src="https://lh3.googleusercontent.com/J6_coFbogxhRI9iM864NL_liGXvsQp2AupsKei7z0cNNfDvGUmWUy20nuUhkREQyrpY4bEeIBuc=w300" width=100 height=100 alt="Google News"></a>\
 						<a href="https://www.cnet.com/" target="_blank" title="CNET"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Cnet-logo-red-2020.svg/250px-Cnet-logo-red-2020.svg.png" width=136.612021857 height=100 alt="CNET"></a>\
-						<a href="https://www.theverge.com/" target="_blank" title="The Verge"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/The_Verge_Logo_2016.svg/100px-The_Verge_Logo_2016.svg.png" width=100 height=100 alt="The Verge"></a>\
+						<a href="https://www.theverge.com/" target="_blank" title="The Verge"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@d6c8b79/verge.png" width=100 height=100 alt="The Verge"></a>\
 						<a href="https://www.nytimes.com/" target="_blank" title="The New York Times"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/NYTimes.png" width=100 height=100 alt="The New York Times"></a>\
 						<a href="https://www.washingtonpost.com/" target="_blank" title="The Washington Post"><img src="https://lh3.googleusercontent.com/JDrO88srYGmqrOeyqtT1al3JQD0IKRS-OO7PDMjETiPuDNgCC45wJF8LIBH-QOcTMTE=s180-rw" width=100 height=100 alt="The Washington Post"></a>\
 					</span>\
