--- a/achievements.html
+++ b/achievements.html
@@ -136,20 +136,51 @@
 				<td>February 2020</td>
 			</tr>
 			<tr>
-				<td>Honor Roll</td>
+				<td>Accepted into Drexel High School Scholars</td>
 				<td class="center">Academics and Achievement</td>
-				<td>1st Semester 2019-2020</td>
+				<td>May 2020</td>
+			</tr>
+			<tr>
+				<td>Distinguished Honor Roll</td>
+				<td class="center">Academics and Achievement</td>
+				<td>2nd Marking Period 2020-2021</td>
+			</tr>
+			<tr>
+				<td>Attended SPDL Semi-Finals</td>
+				<td class="center">Debate</td>
+				<td>January 2021</td>
+			</tr>
+			<tr>
+				<td>PJAS Regional - 2nd Place</td>
+				<td class="center">Science</td>
+				<td>February 2021</td>
+			</tr>
+			<tr>
+				<td>Joined Lower Moreland DEI Council</td>
+				<td class="center">Diversity, Equity, and Inclusion</td>
+				<td>March 2021</td>
+			</tr>
+			<tr>
+				<td>MCSRC - Made it to DelVal Regional Science Fair</td>
+				<td class="center">Science</td>
+				<td>March 2021</td>
+			</tr>
+			<tr>
+				<td>Distinguished Honor Roll</td>
+				<td class="center">Academics and Achievement</td>
+				<td>3rd Marking Period 2020-2021</td>
 			</tr>
 		</tbody>
 	</table>
 	<h3>Achievements Recognized By</h3>
 	<div id="logo">
-		<a href="http://www.pjas.net/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PJAS.jpg" height=120 width=120 alt="Pennsylvania Junior Academy of Science" id="pjas"></a>
+		<a href="https://www.lmtsd.org/Page/230" target="_blank" id="bottom"><img src="https://i.vimeocdn.com/portrait/3663763_300x300" style="padding-top: 14px;" width=100 height=100 alt="Lower Moreland Township School District"></a>
+		<a href="http://www.pjas.net/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PJAS.jpg" height=100 width=100 alt="Pennsylvania Junior Academy of Science" id="pjas"></a>
+		<a href="http://www.mcsta.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@b501fe0/MCSTA.png" height=100  width=79.4820717131 alt="Montgomery County Science Teachers Association" id="mcsta"></a>
 		<a href="https://www.piaa.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PIAA.png" style="padding-top: 18px;" alt="Pennsylvania Interscholastic Athletic Association"></a>
 		<a href="https://www.aatg.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/AATG.png" width=144.6 height=72 style="padding-top: 25px;" alt="American Association of Teachers of German"></a>
-		<a href="http://www2.ed.gov/programs/presedaward/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/Peap.jpg" alt="President's Award for Educational Excellence" id="peap"></a>
-		<a href="https://www.lmtsd.org/Page/230" target="_blank" id="bottom"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PTA.jpg" style="padding-top: 14px;" alt="Lower Moreland PTA" id="pta"></a>
 		<a href="https://www.paseed.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/SEED.webp" height="120" alt="PA SEED"></a>
+		<a href="http://www2.ed.gov/programs/presedaward/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/Peap.jpg" alt="President's Award for Educational Excellence" id="peap"></a>
 	</div>
 <button onclick="scrollup()" id="scroll" title="Go to top"><p>Go to top</p><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" height=15></button>
 <footer>
