--- a/achievements.html
+++ b/achievements.html
@@ -174,13 +174,13 @@
 	</table>
 	<h3>Achievements Recognized By</h3>
 	<div id="logo">
-		<a href="https://www.lmtsd.org/Page/230" target="_blank" id="bottom"><img src="https://i.vimeocdn.com/portrait/3663763_300x300" style="padding-top: 14px;" width=100 height=100 alt="Lower Moreland Township School District"></a>
-		<a href="http://www.pjas.net/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PJAS.jpg" height=100 width=100 alt="Pennsylvania Junior Academy of Science" id="pjas"></a>
-		<a href="http://www.mcsta.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@b501fe0/MCSTA.png" height=100  width=79.4820717131 alt="Montgomery County Science Teachers Association" id="mcsta"></a>
-		<a href="https://www.piaa.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PIAA.png" style="padding-top: 18px;" alt="Pennsylvania Interscholastic Athletic Association"></a>
-		<a href="https://www.aatg.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/AATG.png" width=144.6 height=72 style="padding-top: 25px;" alt="American Association of Teachers of German"></a>
-		<a href="https://www.paseed.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/SEED.webp" height="120" alt="PA SEED"></a>
-		<a href="http://www2.ed.gov/programs/presedaward/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/Peap.jpg" alt="President's Award for Educational Excellence" id="peap"></a>
+		<a href="https://www.lmtsd.org/Page/230" target="_blank" id="bottom"><img src="https://i.vimeocdn.com/portrait/3663763_300x300" style="padding-top: 14px;" width=100 alt="Lower Moreland Township School District"></a>
+		<a href="http://www.pjas.net/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PJAS.jpg" width=100 alt="Pennsylvania Junior Academy of Science" id="pjas"></a>
+		<a href="http://www.mcsta.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@b501fe0/MCSTA.png" width=100 alt="Montgomery County Science Teachers Association" id="mcsta"></a>
+		<a href="https://www.piaa.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PIAA.png" style="padding-top: 18px;" width=100 alt="Pennsylvania Interscholastic Athletic Association"></a>
+		<a href="https://www.aatg.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/AATG.png" width=100 style="padding-top: 25px;" alt="American Association of Teachers of German"></a>
+		<a href="https://www.paseed.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/SEED.webp" width=100 alt="PA SEED"></a>
+		<a href="http://www2.ed.gov/programs/presedaward/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/Peap.jpg" alt="President's Award for Educational Excellence" width=100 id="peap"></a>
 	</div>
 <button onclick="scrollup()" id="scroll" title="Go to top"><p>Go to top</p><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" height=15></button>
 <footer>
