--- a/work.html
+++ b/work.html
@@ -89,7 +89,11 @@
 	</tr>
 	<tr>
 		<td style="width: 293px;"><h3 style="width: 293px;">PA SEED Environmental Literacy Hackathon Mock App - LCC (Made in partnership with Varun Singh, Nihal Bankulla, and David Volchonok)</h3></td>
-		<td><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRUxrW1JAjmBGqqnaOJFjHFPnv10MVMaEuC-PvrJA3vfKjClD5dvYr3z_ZhWPdCSZTcSaATbT-S56lg/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" height="400" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></td>
+		<td><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRmNLR2brLm1XCsgSIHFuP21qMNRCfTALJnhgOEag6ExUd-6qa_HQiom7mBFgkOfMmvfLzScZFMuBT9/embed?start=false&loop=false&delayms=3000" frameborder="0" height="400" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></td>
+	</tr>
+	<tr>
+		<td><h3>10th Grade PJAS Project - Are Sodas and Carbonated Waters Effective Plant Fertilizers?</h3></td>
+		<td><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ0OuvvQrmHveTgkbcantwjPMI_rxCQKWaMIbk-1j780C4Z6xmtXR57veoIBHvLRoslFrnUlNJoXH4Z/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></td>
 	</tr>
 </table>
 </div>
