--- a/about.html
+++ b/about.html
@@ -59,13 +59,14 @@
 <h1 id="top">About Ashwin</h1>
 <div>
 <img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Ashwin%20Thomas.jpg" height="400" onMouseDown="copyright()" alt="Ashwin Thomas">
-<p style="margin-top: 0px; font-weight: bold;">Ashwin Thomas</p>
+<p style="margin-top: 0px; font-weight: bold;">Ashwin Thomas</p><a href="https://www.name-coach.com/ashwin-thomas" target="_blank"><img src="https://www.name-coach.com/images/emailsig/email-sig.jpeg" alt="Learn to pronounce my name"></a>
 </div>
 <ul>
 	<li>Student at Lower Moreland High School</li>
-	<li>Advanced student with interests in STEM (Science, Technology, Engineering, and Math)</li>
+	<li>High-achieving student</li>
+	<li>Interested in politics, technology, and law</li>
 	<li>Amateur web developer</li>
-	<li>Future plans to work in tech industry and become President</li>
+	<li>Future plans to pursue politics and presidency</li>
 </ul>
 <button onclick="scrollup()" id="scroll" title="Go to top"><p>Go to top</p><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" height=15></button>
 <footer>
