--- a/about.html
+++ b/about.html
@@ -59,7 +59,10 @@
 <h1 id="top">About Ashwin</h1>
 <div>
 <img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Ashwin%20Thomas.jpg" height="400" onMouseDown="copyright()" alt="Ashwin Thomas">
-<p style="margin-top: 0px; font-weight: bold;">Ashwin Thomas</p><a href="https://www.name-coach.com/ashwin-thomas" target="_blank"><img src="https://www.name-coach.com/images/emailsig/email-sig.jpeg" style="display: inline;" alt="Learn to pronounce my name"></a>
+<div>
+<p style="margin-top: 0px;font-weight: bold;display: inline-block;vertical-align: middle;margin: 0px;">Ashwin Thomas</p>
+<a href="https://www.name-coach.com/ashwin-thomas" target="_blank"><img src="https://www.name-coach.com/images/emailsig/email-sig.jpeg" style="display: inline-block;vertical-align: middle;" alt="Learn to pronounce my name"></a>
+</div>
 </div>
 <ul>
 	<li>Student at Lower Moreland High School</li>
