--- a/work.html
+++ b/work.html
@@ -101,6 +101,7 @@
 <footer>
 <a href="https://shwin320.github.io" title="Home"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Home.svg" alt="Home" id="hbutton" height=24 style="margin-left:2px; padding-right: 8px;"></a>
 <a href="mailto:shwin320@gmail.com" title="Email Ashwin"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Email.svg" alt="Email Ashwin" id="ebutton" height=24></a>
+<a href="https://www.name-coach.com/ashwin-thomas" title="Hear my name"><img src="https://www.name-coach.com/images/emailsig/email-sig.jpeg" height=24 alt="Hear my nakme"></a>
 <p>Copyright © 2020 Ashwin Thomas. All Rights Reserved.</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@2b80595/Ashwin's Website.js"></script>
