--- a/work.html
+++ b/work.html
@@ -33,9 +33,13 @@
 	}
 	#scroll{
 		height: 20px;
+		z-index: 2;
+		position: absolute;
+		bottom: 50px;
+		right: 5px;
 	}
 	.end{
-		margin-bottom: 65px;
+		margin-bottom: 75px;
 	}
 	</style>
 </head>
