--- a/work.html
+++ b/work.html
@@ -35,11 +35,12 @@
 		height: 20px;
 		z-index: 2;
 		position: fixed;
-		bottom: 50px;
-		right: 5px;
+		bottom: 55px;
+		right: 10px;
+		margin: 0px;
 	}
 	.end{
-		margin-bottom: 75px;
+		margin-bottom: 65px;
 	}
 	</style>
 </head>
