--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 <button onclick="scrollup()" id="scroll" title="Go to top"><p>Go to top</p><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" height=15></button>
 <footer>
 <a href="https://shwin320.github.io" title="Home"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Home.svg" alt="Home" id="hbutton" height=24 style="margin-left:2px; padding-right: 8px;"></a>
-<a href="mailto:shwin320@gmail.com" title="Email Ashwin"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Email.svg" alt="Email Ashwin" id="ebutton" height=24></a>
+<a href="mailto:shwin320@gmail.com" title="Email Ashwin"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Email.svg" alt="Email Ashwin" id="ebutton" height=24  style="padding-right: 8px;"></a>
 <a href="https://www.name-coach.com/ashwin-thomas" title="Hear My Name"><img src="https://www.name-coach.com/images/emailsig/email-sig.jpeg" height=24 alt="Hear My Name"></a>
 <p>Copyright © 2020 Ashwin Thomas. All Rights Reserved.</p>
 </footer>
