--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <h1 id="top">Welcome to Ashwin's Website</h1>
 <br><br>
 <q>I have no special talent. I am only passionately curious.</q>
-<p style="text-align: center; text-indent: 30%;">— Albert Einstein</p>
+<p style="text-align: center; text-indent: 30%;" class="end">— Albert Einstein</p>
 <footer>
 <a href="https://shwin320.github.io" title="Home"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Home.svg" alt="Home" id="hbutton" height=24 style="margin-left:2px; padding-right: 8px;"></a>
 <a href="mailto:shwin320@gmail.com" title="Email Ashwin"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Email.svg" alt="Email Ashwin" id="ebutton" height=24 style="padding-right: 8px;"></a>
