--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 <a href="https://www.name-coach.com/ashwin-thomas" target="_blank"><img src="https://www.name-coach.com/images/emailsig/email-sig.jpeg" style="display: inline-block;vertical-align: middle;" alt="Learn to pronounce my name"></a>
 </div>
 </div>
-<ul>
+<ul class="end">
 	<li>Student at Lower Moreland High School</li>
 	<li>High-achieving student</li>
 	<li>Interested in politics, technology, and law</li>
