--- a/achievements.html
+++ b/achievements.html
@@ -173,7 +173,7 @@
 		</tbody>
 	</table>
 	<h3>Achievements Recognized By</h3>
-	<div id="logo">
+	<div id="logo" class="end">
 		<a href="https://www.lmtsd.org/Page/230" target="_blank" id="bottom"><img src="https://i.vimeocdn.com/portrait/3663763_300x300" width=100 alt="Lower Moreland Township School District"></a>
 		<a href="http://www.pjas.net/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PJAS.jpg" width=100 alt="Pennsylvania Junior Academy of Science" id="pjas"></a>
 		<a href="http://www.mcsta.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@b501fe0/MCSTA.png" width=100 alt="Montgomery County Science Teachers Association" id="mcsta"></a>
