--- a/OneLocker/page4.html
+++ b/OneLocker/page4.html
@@ -189,5 +189,25 @@
 			darkImg(isDark);
 			isDark.addListener(darkImg);
 		</script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCJq6RpI3rdxW__WVALbw5c0nWGE-akdAE",
+    authDomain: "onelocker-432f9.firebaseapp.com",
+    databaseURL: "https://onelocker-432f9-default-rtdb.firebaseio.com",
+    projectId: "onelocker-432f9",
+    storageBucket: "onelocker-432f9.appspot.com",
+    messagingSenderId: "1099368824930",
+    appId: "1:1099368824930:web:655128e95ad7f9504a513b"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 	</body>
 </html>
